--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,10 @@
     <string name="acc_row4">Membership Information</string>
     <string name="acc_row5">Emergency Contacts</string>
     <string name="acc_row6">Help Center</string>
+    <string name="widget_checkin_button">Check In</string>
+    <string name="widget_pic_contentDesc">Picture of London Bridge</string>
+    <string name="backarrow_contentDesc">Back Arrow Button</string>
+    <string name="acc_name">Jane Doe</string>
 
 
 </resources>
